--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,9 @@ dependencies:
   firebase_core: ^2.31.0
   firebase_auth: ^4.19.5
   flutter_riverpod: ^2.5.1
-  cloud_firestore: ^4.17.3
+  cloud_firestore: ^4.17.4
   http: ^1.2.1
+  random_string: ^2.3.1
 
 dev_dependencies:
   flutter_test:
