--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  flutter_svg: ^0.22.0
+  #flutter_svg: ^0.22.0
   provider: ^6.1.2
   firebase_core: ^2.31.0
   firebase_auth: ^4.19.5
@@ -43,7 +43,11 @@ dependencies:
   cloud_firestore: ^4.17.4
   http: ^1.2.1
   random_string: ^2.3.1
-
+  intl: ^0.18.0
+  firebase_messaging: ^14.9.3
+  flutter_local_notifications: ^14.0.0
+  timezone: 0.9.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
